# lib/api-spec/openapi.yaml
@@ -661,6 +661,8 @@ components:
           type: number
         avgFoodPerDay:
           type: number
+        defaultFuelPrice:
+          type: ["number", "null"]
         notes:
           type: ["string", "null"]
         calculationsThisWeek:
@@ -678,6 +680,7 @@ components:
         - defaultVehicleId
         - avgAccomPerNight
         - avgFoodPerDay
+        - defaultFuelPrice
         - notes
         - calculationsThisWeek
         - lastCalculationReset
@@ -718,6 +721,8 @@ components:
           type: number
         avgFoodPerDay:
           type: number
+        defaultFuelPrice:
+          type: ["number", "null"]
         notes:
           type: ["string", "null"]
       required:
